--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    
-    <title>Netflix</title>
+
+    <title>Netflix - Watch TV Shows Online, Watch Movies Online</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
